catalogue/e/style.css
@font-face {
  font-family: akzidenz;
  src: local('Akzidenz-Grotesk BQ Medium'),
       url('fonts/akzidenzgrotesk-medium-webfont.woff') format('woff'),
       url('fonts/akzidenzgrotesk-medium-webfont.ttf') format('truetype'),
       url('fonts/akzidenzgrotesk-medium-webfont.svg#akzidenz-grotesk_bqmedium') format('svg');
  font-weight: 500;
  font-style: normal;
}

* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body {
  background: #fff;
}

html, body, main, .games, .details, .game:before {
  height: 100%;
}

header, section, main {
  display: block;
}

body {
  font-family: "Source Sans Pro", "Helvetica Neue", sans-serif;
}

a {
  color: #369;
  text-decoration: none;
}

a:hover {
  color: #036;
}

.header {
  background: #213b59;
  height: 50px;
  position: fixed;
  width: 100%;
  z-index: 1;
}

h1 {
  margin: 0 auto;
  width: 100px;
}

.wordmark {
  color: #eff;
  display: inline-block;
  font-size: 24px;
  font-weight: normal;
  line-height: 50px;
  position: relative;
  text-shadow: 0 0 4px rgba(0,255,255,.5);
  transition: text-shadow .5s;
}

.wordmark:before {
  box-shadow: inset 0 0 .5em rgba(0,255,255,.7),
              inset 0 0 .25em rgba(255,255,255,.5),
              0 0 .5em rgba(0,255,255,.5);
  border-radius: 1em;
  content: "";
  display: inline-block;
  height: 1em;
  margin-bottom: -.15em;
  margin-right: .5em;
  width: 1em;
}

.wordmark:after {
  animation: 10s spin infinite steps(300);
  -webkit-animation: 10s spin infinite steps(300);
  box-shadow: inset 0 0 .25em rgba(0,255,255,.7);
  border-radius: 1em;
  content: "";
  display: block;
  height: .5em;
  left: 0;
  margin-top: -.5em;
  position: absolute;
  top: 50%;
  transform-origin: .5em .5em;
  -webkit-transform-origin: .5em .5em;
  width: .5em;
}

.wordmark:hover {
  color: #eff;
  text-shadow: 0 0 10px #0ff;
}

main {
  background: #fff;
}

.games {
  background: #222;
  display: flex;
  overflow: hidden;
  position: absolute;
  list-style: none;
  font-size: 0;
}

.game {
  color: #fff;
  cursor: pointer;  /* TODO: Figure out a decent way to make bigger click targets for the panel. */
  display: block;
  min-height: 100%;
  flex: 1;
  font-size: 14px;
  opacity: .75;  /* Just to be a tad subtle. */
  padding: 80px 30px 30px;  /* 80px = 50px header + 30px padding */
  position: relative;
  width: 300px;
}

.games p,
.games:hover .game,
.game:hover {
  transition: opacity .35s ease-in-out, padding .35s ease-in-out;
}

.games p {
  opacity: .5;
}

.game:hover p {
  opacity: .75;
}

.games:hover .game {
  /*opacity: .3;*/  /* This was annoying. */
  transition: opacity .35s;
}

.games:hover .game:hover {
  opacity: 1;
}

h2 {
  font: 28px/1.1 akzidenz, "Source Sans Pro", sans-serif;
  margin-bottom: 15px;
  text-shadow: 0 .5px .5px #111;
}

.game:after {
  background-image: linear-gradient(to bottom, rgba(0,0,0,.95), transparent 100%);
  content: "";
  height: 50vh;
  left: 0;
  pointer-events: none;
  position: absolute;
  top: 50px;
  width: 100%;
}

.game:hover:after {
  background-image: linear-gradient(to bottom, rgba(0,0,0,.55), transparent 100%);
}

.game .details {
  position: relative;
  z-index: 1;
}

.details ul {
  list-style: none;
}

.game:before {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

.game-bastion:before {
  background: url(img/screenshots/bastion/wallpaper.jpg) 57% 70%;
  opacity: .2;
}

.game-megaman:before {
  background: #052543 url(img/megaman.png) 100% 100% no-repeat;
  background-size: contain;
}

.game-hexgl:before {
  background: url(img/screenshots/hexgl/1.png) 52% 0 no-repeat;
  background-size: cover;
}

.game-dungeonfury:before {
  background: url(img/dungeonfury.png) center no-repeat;
  background-size: cover;
}

.game-bananabread:before {
  background: url(img/bananabread.jpg) 75% 0 no-repeat;
  background-size: cover;
}

.game-monstermadness:before {
  background: url(img/monstermadness.jpg) 30% 0 no-repeat;
  background-size: cover;
}

.game-urbangalaxy:before {
  background: url(img/urbangalaxy.jpg) 35% 100% no-repeat;
  background-size: cover;
}

.game-deadtrigger2:before {
  background: url(img/deadtrigger2.png) 53% 0 no-repeat;
  background-size: cover;
}

.game-quake:before {
  background: url(img/quake-2.png) 45% 0% no-repeat;
  background-size: cover;
}

.game-rollercoaster:before {
  background: url(img/rollercoaster.png) 83% 0 no-repeat;
  background-size: cover;
}

.summary {
  margin-bottom: 15px;
}

.btn, .btn:hover {
  color: inherit;
}

.btn {
  background: none;
  border: none;
  cursor: pointer;
  display: inline-block;
  font-family: inherit;
  font-size: inherit;
  font-weight: 700;
  letter-spacing: 1px;
  outline: none;
  padding: 15px 80px;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -moz-transition: all 0.3s;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.btn:after {
  content: '';
  position: absolute;
  z-index: -1;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
}

.btn-2 {
  background: #4ecb4e;
  box-shadow: 0 6px #3cab3c;
  color: #fff;
  -webkit-transition: none;
  -moz-transition: none;
  transition: none;
}

.btn-2g {
  border-radius: 40px;
}

.btn-2g:hover {
  box-shadow: 0 4px #3cab3c;
  top: 2px;
}

.btn-2g:active {
  box-shadow: none;
  top: 6px;
}

.actions {
  background: rgba(0,0,0,.75);
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 30px;
  width: 100%;
  z-index: 1;
}

.btn.btn-play {
  width: 100%;
}

@-moz-keyframes spin {
  0% {
    -moz-transform: rotate(0turn);
  }

  100% {
    -moz-transform: rotate(1turn);
  }
}
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0turn);
    transform: rotate(0turn);
  }

  100% {
    -webkit-transform: rotate(1turn);
    transform: rotate(1turn);
  }
}
@keyframes spin {
  0% {
    transform: rotate(0turn);
    -webkit-transform: rotate(0turn);
  }

  100% {
    transform: rotate(1turn);
    -webkit-transform: rotate(1turn);
  }
}

.gameface {
  border: 2px solid rgba(255,255,255,.5);
  height: 50px;
  width: 50px;
  background-size: cover;
  background-position: center;
  float: left;
  background-repeat: no-repeat;
  border-radius: 50px;
  margin-right: 10px;
}

.details li {
  background: rgba(0,0,0,.75);
  border-radius: 50px;
  line-height: 50px;
  font-size: 16px;
  margin-top: 10px;
}

